--- a/config.toml
+++ b/config.toml
@@ -4,5 +4,15 @@ author = "Steve Francia"
 copyright = "Copyright (c) 2008 - 2014, Steve Francia; all rights reserved."
 canonifyurls = true
 paginate = 3
+languageCode = "en"
+DefaultContentLanguage = "en"
+[languages.en]
+languageName = "English"
+weight = 1
+title = "Hugo Themes"
 
+[languages.fr]
+languageName = "Français"
+weight = 2
+title = "Thèmes Hugo"
 
