--- a/config.toml
+++ b/config.toml
@@ -22,11 +22,11 @@ title = "Thèmes Hugo"
   [[menu.main]]
     identifier = "tutorials"
     name = "Tutorials"
-    url = "post/"
+    url = "/post/"
     weight = 5
 
   [[menu.main]]
     identifier = "about"
     name = "About"
-    url = "about/"
+    url = "/about/"
     weight = 10
